# File-Organizer

./: .gitignore  LICENSE  README.md  cli.py  config.json  constants.py  main.py  pyproject.toml
src/commands/: add_path.py  edit_config.py  organize.py  show_config.py  undo.py
src/config/: allowed_path.yaml  config_editor.py  config_type_hint.py  config_validator.py  edit_allowed_path.py  file_categories.yaml  logging_config.py  optimize_config.py  read_config.py  utils.py
src/core/: constants.py  operations.py  organize_many_dirs.py  utils.py  validator.py
src/file_organizer/: cli.py
src/file_organizer/commands/: add_path.py  edit_config.py  organize.py  show_config.py  undo.py
src/file_organizer/config/: config_editor.py  config_validator.py  edit_allowed_path.py  file_allowed_logs_config_path.py  logging_config.py  optimize_config.py  read_config.py  utils.py
src/file_organizer/core/: constants.py  logo_manager.py  organize_many_dirs.py  validator.py
src/file_organizer/filesystem/: beautiful_display_and_progress.py  create_and_move.py  dir_cleaner.py
src/file_organizer/history/: manager.py
src/filesystem/: beautiful_display_and_progress.py  create_and_move.py  dir_cleaner.py
src/history/: json_writers.py  manager.py
tests/: pattern_validator_test.py
