[project]
name = "file-organizer"
version = "0.1.0"
description = "A smart file organizer with undo capability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ijson>=3.4.0",
    "loguru>=0.7.3",
    "pyyml>=0.0.2",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
organizer = "file_organizer.cli:app"
